fix pagination / footer overlap

--- a/app/assets/stylesheets/folio/console/_variables.sass
+++ b/app/assets/stylesheets/folio/console/_variables.sass
@@ -107,3 +107,6 @@ $grid-breakpoints: ( xxl: 1550px )
 $container-max-widths: ( xxl: 1550px )
 
 $card-border-radius: 0
+
+$footer-height: 65px
+$footer-height-xxl: 95px
