--- a/app/cells/folio/console/form/footer/footer.sass
+++ b/app/cells/folio/console/form/footer/footer.sass
@@ -90,8 +90,8 @@
 .f-c-form-footer-spacer
   visibility: hidden
   margin-top: map-get($spacers, 3)
-  height: 65px
+  height: $footer-height
   margin-bottom: - $spacer
 
   +media-breakpoint-up(xxl)
-    height: 95px
+    height: $footer-height-xxl
